Fix Alignment

--- a/main.css
+++ b/main.css
@@ -241,7 +241,7 @@ body {
     width: 65%;
     height: 30%;
     bottom: 0;
-    left: 8%;
+    left: 35%;
     background-image: url("img/astro.png");
     background-repeat: no-repeat;
     background-size: 100%;
